# advremap

./: .gitignore  CMakeLists.txt  README.md
plugin/: CMakeLists.txt  main.c  main.yml
plugin/resources/: debug_config
plugin/src/: main.c
src/: main.c
src/applist/: applist.c  applist.h
src/guilib/: lib.c  lib.h
src/remap/: config.c  config.h  remap.c  remap.h
src/ui/: action_menu.c  action_menu.h  adv_actions_menu.c  adv_actions_menu.h  app_menu.c  app_menu.h  main_menu.c  main_menu.h  test_remap.c  test_remap.h
